--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,6 @@
 	<artifactId>poc-on-jenkins2</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
-
-
-
-
-
 	<name>poc-on-jenkins2</name>
 
     <properties>
@@ -21,8 +16,9 @@
 		<app.runtime>4.2.0</app.runtime>
 		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 	</properties>
-
+   
 	<build>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
@@ -30,6 +26,11 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+				<deploymentType>standalone</deploymentType>
+ <muleVersion>4.2.0</muleVersion> 
+ <muleHome>${mule.home}</muleHome> 
+ <applicationName>${artifactId}</applicationName> 
+ <community>${mule.runtime.community}</community>
 				</configuration>
 			</plugin>
 		</plugins>
