--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>poc-on-jenkins2</artifactId>
+	<artifactId>poc-on-jenkins</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
-	<name>poc-on-jenkins2</name>
+
+
+
+
+
+	<name>poc-on-jenkins</name>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,31 +21,25 @@
 		<app.runtime>4.2.0</app.runtime>
 		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 	</properties>
-	
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
-				
+				<version>${mule.maven.plugin.version}</version>
+				<extensions>true</extensions>
 				<configuration>
-					<deploymentType>arm</deploymentType>
-					<username>mani21</username> 
-					<password>Maninene@21</password>
-					<target>local</target>
-					<targetType>server</targetType>
-					<environment>Sandbox</environment>
+				<cloudHubDeployment>
+				<username>mani21</username>
+				<password>Maninene@21</password>
+				<muleVersion>4.2.0</muleVersion>
+				<environment>Sandbox</environment>
+				<workers>1</workers>
+				<workerType>Micro</workerType>
+				<applicationName>poc-on-jenkins</applicationName>
+				</cloudHubDeployment>
 				</configuration>
-				<executions>
-					<execution>
-						<id>deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -85,4 +84,5 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
- </project>
+
+</project>
