--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
      <environment>Sandbox</environment>
      
       <properties>
-        <key>cicdonpremi</key>
+        <key>cicdonpremesis</key>
       </properties>
     </armDeployment>
 				</configuration>
